# apisbot

./: .dockerignore  .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/actions/setup-python-env/: action.yml
.github/workflows/: publish.yml  qa.yml
src/apisbot/: __main__.py  custom_aspects_factory.py  custom_aspects_utils.py  custom_chart_data_factory.py  transit.py
src/apisbot/bot/commands/: start.py
src/apisbot/bot/dialogs/: __init__.py  birth_data_dialog.py
src/apisbot/bot/handlers/: chart_flow.py  common.py  composite_flow.py  start.py
src/apisbot/bot/middlewares/: logging_middleware.py
src/apisbot/bot/states/: __init__.py  chart_states.py
src/apisbot/bot/widgets/: __init__.py  calendar.py  time_picker.py
src/apisbot/config/: settings.py
src/apisbot/models/: __init__.py  birth_data.py  chart_selection.py  date_time.py  errors.py  location.py  session.py
src/apisbot/services/: __init__.py  chart_selection_service.py  chart_service.py  converter_service.py  custom_aspects_factory.py  custom_chart_data_factory.py  custom_chart_drawer.py  date_parser.py  date_time_service.py  input_validation_service.py  location_service.py  menu_service.py  session_service.py
src/apisbot/themes/: my-theme.css
tests/: __init__.py  conftest.py  test_birth_data.py  test_chart_flow_handlers.py  test_chart_service.py  test_common_handlers.py  test_composite_flow_error_paths.py  test_composite_flow_handlers.py  test_converter_service.py  test_converter_service_errors.py  test_date_parser.py  test_date_time_model.py  test_location_model.py  test_logging_middleware.py  test_main.py  test_session.py  test_settings.py  test_start_handlers.py  test_states.py
tests/integration/: __init__.py  test_calendar_time_picker_e2e.py  test_chart_selection_e2e.py  test_composite_flow_e2e.py  test_error_recovery_e2e.py  test_natal_flow_e2e.py  test_session_cleanup.py  test_start_menu_e2e.py
tests/unit/: __init__.py  test_calendar_widget.py  test_chart_selection_service.py  test_date_time_service.py  test_input_validation_service.py  test_location_service.py  test_menu_service.py  test_session_service.py  test_time_picker_widget.py
