[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apisbot"
version = "0.1.0"
description = "Telegram bot for generating natal charts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.3.0",
    "kerykeion>=4.7.0",
    "cairosvg>=2.7.1",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pyright>=1.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apisbot"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["src"]
exclude = ["**/__pycache__", ".venv", "venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
