[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "apisbot"
version = "0.1.0"
description = "Telegram bot for generating natal charts"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.3.0",
    "kerykeion>=4.7.0",
    "cairosvg>=2.7.1",
    "pydantic-settings>=2.1.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.3",
    "pytest-asyncio>=0.21.1",
    "pytest-mock>=3.12.0",
    "pytest-cov>=4.1.0",
    "pytest-socket>=0.7.0",
    "basedpyright>=1.32.1",
    "black>=24.0.0",
    "isort>=5.13.0",
    "flake8>=7.0.0",
    "flake8-pyproject>=1.2.3",
]

[tool.hatch.build.targets.wheel]
packages = ["src/apisbot"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingImports = true
reportMissingTypeStubs = false
include = ["src"]
exclude = ["**/__pycache__", ".venv", "venv"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--disable-socket",
    "--allow-unix-socket",
    "--cov=src/apisbot",
    "--cov-report=term-missing",
    "--cov-report=xml",
    "--cov-report=html",
    "--cov-fail-under=95",
    "-v",
]

[tool.coverage.run]
branch = true
source = ["src/apisbot"]

[tool.coverage.report]
fail_under = 95
show_missing = true

[tool.black]
line-length = 120
target-version = ["py311"]

[tool.isort]
profile = "black"
line_length = 120

[tool.flake8]
max-line-length = 120
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", ".venv", "venv", "build", "dist"]
